# BayesNet_vcpkg

./: .clang-format  .clang-tidy  .clang-uml  .gitignore  .gitmodules  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CPPFImdlp.cpp  LICENSE  Makefile  Network.cc  Network.h  Node.cc  Node.h  README.md  TAN_iris.dot  gcovr.cfg  grid_stree.json  k.sh  mac_mst.txt  main copy.cc  main.cc  stree_results.json  test.cc  update_coverage.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
.sonarlint/: connectedMode.json
bayesnet/: BaseClassifier.h  CMakeLists.txt
bayesnet/classifiers/: .XSPODE.h.swp  Classifier.cc  Classifier.h  KDB.cc  KDB.h  KDBLd.cc  KDBLd.h  Proposal.cc  Proposal.h  SPODE.cc  SPODE.h  SPODELd.cc  SPODELd.h  SPnDE.cc  SPnDE.h  TAN.cc  TAN.h  TANLd.cc  TANLd.h  XSP2DE.cc  XSP2DE.h  XSPODE.cc  XSPODE.h  XSPnDE.cc  XSPnDE.h
bayesnet/ensembles/: A2DE.cc  A2DE.h  AODE.cc  AODE.h  AODELd.cc  AODELd.h  Boost.cc  Boost.h  BoostA2DE.cc  BoostA2DE.h  BoostAODE.cc  BoostAODE.h  Ensemble.cc  Ensemble.h  WA2DE.cc  WA2DE.h  XBA2DE.cc  XBA2DE.h  XBAODE.cc  XBAODE.h  boost.h
bayesnet/feature_selection/: CFS.cc  CFS.h  FCBF.cc  FCBF.h  FeatureSelect.cc  FeatureSelect.h  IWSS.cc  IWSS.h
bayesnet/network/: CountingSemaphore.h  Network.cc  Network.h  Node.cc  Node.h  Smoothing.h
bayesnet/utils/: BayesMetrics.cc  BayesMetrics.h  CountingSemaphore.h  Mst.cc  Mst.h  TensorUtils.h  TensorUtils.hpp  bayesnetUtils.cc  bayesnetUtils.h
config/: CMakeLists.txt  config.h.in
data/: glass.net  iris.net  mfeat-factors-kdb2.net  mfeat-factors-kdb3.net
diagrams/: BayesNet.puml
docs/: BoostAODE.docx  BoostAODE.md  BoostAODE_train_predict.odp  Doxyfile.in  algorithm.md  algorithm.tex
docs/man3/: bayesnet_A2DE.3  bayesnet_AODE.3  bayesnet_AODELd.3  bayesnet_BaseClassifier.3  bayesnet_Boost.3  bayesnet_BoostA2DE.3  bayesnet_BoostAODE.3  bayesnet_Classifier.3  bayesnet_Ensemble.3  bayesnet_KDB.3  bayesnet_KDBLd.3  bayesnet_Network.3  bayesnet_Node.3  bayesnet_Proposal.3  bayesnet_SPODE.3  bayesnet_SPODELd.3  bayesnet_SPnDE.3  bayesnet_TAN.3  bayesnet_TANLd.3
html/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
html/BayesNet/bayesnet/: BaseClassifier.h.func-c.html  BaseClassifier.h.func.html  BaseClassifier.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
html/BayesNet/tests/: TestBayesClassifier.cc.func-c.html  TestBayesClassifier.cc.func.html  TestBayesClassifier.cc.gcov.html  TestBayesEnsemble.cc.func-c.html  TestBayesEnsemble.cc.func.html  TestBayesEnsemble.cc.gcov.html  TestBayesMetrics.cc.func-c.html  TestBayesMetrics.cc.func.html  TestBayesMetrics.cc.gcov.html  TestBayesModels.cc.func-c.html  TestBayesModels.cc.func.html  TestBayesModels.cc.gcov.html  TestBayesNetwork.cc.func-c.html  TestBayesNetwork.cc.func.html  TestBayesNetwork.cc.gcov.html  TestBayesNode.cc.func-c.html  TestBayesNode.cc.func.html  index.html  (+15 more)
html/bayesnet/: BaseClassifier.h.func-c.html  BaseClassifier.h.func.html  BaseClassifier.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html
lib/Files/: ArffFiles.cc  ArffFiles.h  CMakeLists.txt
lib/featureselect/: CMakeLists.txt  FeatureSelect.cpp  FeatureSelect.h
sample/: CMakeLists.txt  main.cc  sample.cc  sample_xspode.cc  test.cc
sample/lib/Files/: ArffFiles.h  ArffFiles.hpp
sample/lib/mdlp/: CMakeLists.txt  CPPFImdlp.h  Metrics.h  typesFImdlp.h
simple/: Network.cc  Network.h  Node.cc  Node.h
src/: AODE.cc  AODE.h  AODELd.cc  AODELd.h  BaseClassifier.cc  BaseClassifier.h  BayesMetrics.cc  BoostAODE.cc  BoostAODE.h  CMakeLists.txt  Classifier.cc  Classifier.h  Ensemble.cc  Ensemble.h  ExactInference.cc  ExactInference.h  FCBF.cc  Factor.cc  Factor.h  KDB.cc  KDB.h  KDBLd.h  Metrics.cc  Metrics.hpp  Mst.cc  Network.cc  Network.h  Node.cc  Node.h  SPODE.cc  SPODE.h  TAN.cc  TAN.h  bayesnetUtils.cc  bayesnetUtils.h  utils.cc  utils.h
src/BayesNet/: AODE.cc  AODE.h  AODELd.cc  AODELd.h  BaseClassifier.cc  BaseClassifier.h  BayesMetrics.cc  BayesMetrics.h  BoostAODE.cc  BoostAODE.h  CFS.cc  CFS.h  CMakeLists.txt  Classifier.cc  Classifier.h  Ensemble.cc  Ensemble.h  FCBF.cc  FCBF.h  FeatureSelect.cc  FeatureSelect.h  IWSS.cc  IWSS.h  KDB.cc  KDB.h  KDBLd.cc  KDBLd.h  KDBNew.cc  KDBNew.h  Mst.cc  Mst.h  Network.cc  Network.h  Node.cc  Node.h  Proposal.cc  Proposal.h  SPODE.cc  SPODE.h  SPODELd.cc  (+11 more)
src/Platform/: BestResult.h  BestResults.cc  BestResults.h  BestResultsExcel.cc  BestResultsExcel.h  BestScore.h  CLocale.h  CMakeLists.txt  Colors.h  CommandParser.cc  CommandParser.h  Dataset.cc  Dataset.h  Datasets.cc  Datasets.h  DotEnv.h  ExcelFile.cc  ExcelFile.h  Experiment.cc  Experiment.h  Folding.cc  Folding.h  GridData.cc  GridData.h  GridSearch.cc  GridSearch.h  HyperParameters.cc  HyperParameters.h  ManageResults.cc  ManageResults.h  Models.cc  Models.h  Paths.h  Report.cc  Report.h  ReportBase.cc  ReportBase.h  ReportConsole.cc  ReportConsole.h  ReportExcel.cc  (+26 more)
src/PyClassifiers/: CMakeLists.txt  Classifier.h  ODTE.cc  ODTE.h  PyClassifier.cc  PyClassifier.h  PyClf.h  PyWrap.cc  PyWrap.h  Pyclf.cc  RandomForest.cc  RandomForest.h  STree.cc  STree.h  SVC.cc  SVC.h
src/bayesian_network/: Network.cc  Network.h
src/classifiers/: Classifier.cc  Classifier.h  KDB.h  Proposal.cc  Proposal.h  SPODE.cc
src/ensembles/: AODE.h  AODELd.h  BoostAODE.cc  BoostAODE.h  Ensemble.h
src/feature_selection/: CFS.cc  CFS.h  FCBF.cc  FCBF.h  FeatureSelect.cc  FeatureSelect.h  IWSS.cc
tests/: BayesModels.cc  BayesNetwork.cc  CMakeLists.txt  TestA2DE.cc  TestBayesClassifier.cc  TestBayesEnsemble.cc  TestBayesMetrics.cc  TestBayesModels.cc  TestBayesNetwork.cc  TestBayesNode.cc  TestBoostA2DE.cc  TestBoostAODE.cc  TestBoostXBAODE.cc  TestFeatureSelection.cc  TestFolding.cc  TestMST.cc  TestModulesVersions.cc  TestUtils.cc  TestUtils.h  TestWA2DE.cc  TestXBA2DE.cc  TestXBAODE.cc  TestXSPODE.cc  TestXSPnDE.cc  Timer.h  main.cc  utils.cc  utils.h
tests/data/: iris.net  mfeat-factors.arff
tests/lib/Files/: ArffFiles.h
(+917 files in other folders)
